syntax = "proto3";

package org;

option go_package = "genproto/org";

message OrgAttendanceRequest{
    string orgName = 1;
	string domain = 2;
	string country = 3;
}

message OrgAttendanceResponse{
	string orgId = 1;
	string orgName = 2;
	bool captureCheckInLocation = 3;
	bool enforceLocationCheckIn = 4;
	bool enforceLocationCheckOut = 5;
    double requiredLat = 6;
	double requiredLng = 7;
	bool flexiHoursEnabled = 8;
	int32 flexiHourWindowInMin = 9;
	string orgCheckInTime = 10;
	string orgCheckOutTime = 11;
	int32 checkInMarginInMin = 12;
	float dailyWorkingHours = 13;
	float workingDaysPerWeek = 14;
	string country = 15;
	repeated string weeklyOffDays = 16;
}